[tool.poetry]
name = "cricket-pipeline"
version = "0.1.0"
description = "PySpark ETL pipeline for IPL Cricsheet ball-by-ball data."
authors = ["Cricket Pipeline Maintainers"]
readme = "README.md"
packages = [{ include = "etl" }]
include = ["configs/*.yml"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "2.2.2"
pyarrow = "16.1.0"
pyspark = "3.5.3"
python-dotenv = "1.0.1"
ruamel-yaml = "0.18.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.group.notebooks.dependencies]
jupyterlab = "4.2.3"
notebook = "7.2.1"

[tool.poetry.scripts]
cricket-pipeline = "etl.cli:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
