[project]
name = "cricket-pipeline"
version = "0.1.0"
description = "PySpark ETL pipeline for IPL Cricsheet ball-by-ball data."
authors = [{ name = "Cricket Pipeline Maintainers" }]
readme = "README.md"
requires-python = ">=3.9,!=3.9.7,<3.12"
dependencies = [
    "pandas==2.2.2",
    "pyarrow==16.1.0",
    "pyspark==3.5.3",
    "python-dotenv==1.0.1",
    "ruamel-yaml==0.18.6",
    "streamlit>=1.38,<1.41",
    "plotly>=6.8.0,<7.0.0",
]

[project.scripts]
cricket-pipeline = "etl.cli:main"
cricket-dashboard = "dashboard.cli:main"

[tool.poetry]
packages = [{ include = "etl" }, { include = "dashboard" }]
include = ["configs/*.yml"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[tool.poetry.group.notebooks.dependencies]
jupyterlab = "4.2.3"
notebook = "7.2.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
